--- a/zur/templates/tag_list.html
+++ b/zur/templates/tag_list.html
@@ -1,24 +1,15 @@
 {% extends 'base.html' %}
-{% load render_table from django_tables2 %}
+
 
 {% block title %}Lista tagów{% endblock %}
 
 
 {% block body %}
 
-    {% if user.is_authenticated %}
-        Zalogowano jako {{user.email}}<br>
-    {%endif%}
-    <a href="{% url 'logout'  %}">Wyloguj</a>
-
-    <p>Lista Tagów</p>
-    <a href="{% url 'tag_add'  %}">Dodaj tag</a>
-
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css ">
 
-
-    <table id="example" class="table  table-striped table-bordered" align="center" style="width:80%"  >
+    <table id="example"  class="table  table-striped table-bordered " align="center" style="width:80%;"  >
         <thead>
             <tr >
                 <th></th>
@@ -26,7 +17,8 @@
                 <th>Urządzenie</th>
                 <th>Data dodania</th>
                 <th>Do kiedy wykonać ?</th>
-                <th>Wykonane ?</th>
+                <th style="text-align: left">Wykonane ?</th>
+
 
                <!-- <th>Data wykonania</th>
                 <th>Dział odpowiedzialny</th>
@@ -49,26 +41,48 @@
 
     function format ( d ) {
     // `d` is the original data object for the row
-    return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'+
+    return '<table align="center" style="width:100%" cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'+
         '<tr>'+
-            '<td>Full name:</td>'+
+            '<td>Wystąpienie usterki:</td>'+
             '<td>'+d.depart.name_dep+'</td>'+
         '</tr>'+
         '' +
+        '<tr>'+
+            '<td>Priorytet:</td>'+
+            '<td>'+d.priority.type_prior+'</td>'+
+        '</tr>'+
+            '<tr>'+
+            '<td>Dział odpowiedzialny:</td>'+
+            '<td>'+d.fix_dep.name_fix_cat+'</td>'+
+        '</tr>'+
+            '<tr>'+
+            '<td>Opis:</td>'+
+            '<td>'+d.explain+'</td>'+
+        '</tr>'+
+            '</tr>'+
+            '<tr>'+
+            '<td>Kategoria:</td>'+
+            '<td>'+d.work_cat.name_work_cat+'</td>'+
+        '</tr>'+
+            '</tr>'+
+            '<tr>'+
+            '<td>Data usunięcia usterki:</td>'+
+            '<td>'+d.fix_date+'</td>'+
+        '</tr>'+
         ' <tr>'+
             '<td>Akcja:</td>'+
-            '<td align="center"><a href="/ur/edit/'+d.id+'/" class="btn btn-dark">Edytuj </a>\n'+
+            '<td align="center" ><a href="/ur/edit/'+d.id+'/" class="btn btn-dark">Edytuj </a>\n'+
              '<a  href="/ur/delete/'+d.id+'/" class="btn btn-dark">Usuń </a></td>'+
         '</tr>'+
-        '<tr>'+
-            '<td>Extra info:</td>'+
-            '<td>And any further details here (images etc)...</td>'+
-        '</tr>'+
     '</table>';
+
 }
+
 
 $(document).ready(function() {
     var table = $('#example').DataTable( {
+
+
         "ajax": {
 
             url: "http://localhost:8000/ur/tags/?format=json",
@@ -92,10 +106,35 @@ $(document).ready(function() {
             {data: "machine" },
             {data: "add_date" },
             {data: "expiry_date"},
-            {data: "is_done"},
+            {data: "is_done",
+
+                 "render": function ( data, type, full, meta ) {
+                if(data) {
+                    return '<div  <i class="fas fa-check-circle " style="color:forestgreen"/i>';
+                }
+                return '<i class="fa fa-times" style="color:red " > </i>';}},
+
+
 
         ],
-        "order": [[1, 'asc']]
+        "order": [[1, 'asc']],
+
+
+
+                "language": {
+            "lengthMenu": "Pokaż _MENU_ rekordów na stronie",
+            "zeroRecords": "Nie znaleziono",
+            "info": "Strona _PAGE_ z _PAGES_",
+            "infoEmpty": "Brak rekordów",
+            "infoFiltered": "(filtrowanie z _MAX_ rekordów)",
+                    "search": "Wyszukaj:",
+                    "paginate": {
+        "next":       "Następna",
+        "previous":   "Poprzednia"
+    }},
+
+
+
     } );
 
     // Add event listener for opening and closing details
