--- a/zur/templates/base.html
+++ b/zur/templates/base.html
@@ -14,27 +14,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand"  href="{% url 'index'  %}">Start <i class="fas fa-play"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-        <a class="navbar-brand"  href="{% url 'tag_all'  %}">Awarie <i class="fas fa-tools"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-         <a class="navbar-brand"  href="{% url 'tag_add'  %}">Dodaj <i class="fas fa-folder-plus"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-        <a  style="position:  absolute; right: 0px;"  class="navbar-brand"  href="{% url 'logout'  %}">
-            <button class="btn btn-outline-success my-2 my-sm-0"  type="submit"><i class="fas fa-sign-out-alt"></i> Wyloguj</button>
-        </a>
-
-    </nav>
 
 
 
@@ -44,6 +24,12 @@
 
 
 
-</body>
 
 </html>
+<footer style="text-align: center; background: #343a40" class="footer  mt-auto py-3" >
+  <div class="container">
+    <span class="text-white">2019 Copyright by Marcin Nieznalski</span>
+  </div>
+</footer>
+
+</body>
