--- a/zur/templates/cost_list_view.html
+++ b/zur/templates/cost_list_view.html
@@ -1,3 +1,27 @@
+{% extends 'base.html' %}
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand"  href="{% url 'index'  %}">Start <i class="fas fa-play"></i></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+        <a class="navbar-brand"  href="{% url 'tag_all'  %}">Awarie <i class="fas fa-tools"></i></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+         <a class="navbar-brand"  href="{% url 'tag_add'  %}">Dodaj <i class="fas fa-folder-plus"></i></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+        <a  style="position:  absolute; right: 0px;"  class="navbar-brand"  href="{% url 'logout'  %}">
+            <button class="btn btn-outline-success my-2 my-sm-0"  type="submit"><i class="fas fa-sign-out-alt"></i> Wyloguj</button>
+        </a>
+
+    </nav>
+{% block body %}
+
 <ul>
     <!-- Iterate over object_list -->
     {% for object in object_list %}
@@ -12,3 +36,4 @@
     <li>No objects yet.</li>
     {% endfor %}
 </ul>
+{% endblock %}
