--- a/zur/my_static/my_css.css
+++ b/zur/my_static/my_css.css
@@ -3,14 +3,10 @@
 /*centrowanie panelu logowania*/
 .ab_center
 {
-	height:300px;
-	width:300px;
-	position:absolute;
-	margin:auto;
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%,-50%, 0);
+    position: absolute;
 }
 
 /*centrowanie przycisku zaloguj*/
@@ -35,7 +31,6 @@
 .bacground_form{
   background-image: url("bcg_login.jpg");
     background-color: #cccccc;
-  height: 1350px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -91,3 +86,9 @@ tr.shown td.details-control {
       text-align: center;
   }
 
+.graph_margin{
+    margin-top: 100px;
+}
+.btn22{
+ font-size: 22px;
+}
