--- a/zur/templates/base.html
+++ b/zur/templates/base.html
@@ -8,29 +8,82 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'my_css.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+
 
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+{% block navbar %}
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="{% url 'index' %}">Start <i class="fas fa-play"></i></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a class="navbar-brand" href="{% url 'tag_all' %}">Awarie <i class="fas fa-tools"></i></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a class="navbar-brand" href="{% url 'tag_add' %}">Dodaj <i class="fas fa-folder-plus"></i></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a class="navbar-brand" href="{% url 'graph.html' %}">Statystyka <i class="fas fa-chart-pie"></i> </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="dropdown show">
+        <a class="navbar-brand" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+           Rozliczenia <i class="fas fa-search-dollar"></i>
+        </a>
+
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'urcost:cost_list' %}">Pokaż rozliczenia</a>
+            <a class="dropdown-item" href="{% url 'urcost:cost_add' %}">Dodaj</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+    </div>
+    <a style="position:  absolute; right: 0px;" class="navbar-brand" href="{% url 'logout' %}">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-sign-out-alt"></i> Wyloguj
+        </button>
+    </a>
+
+</nav>
+{% endblock%}
+
+<link rel="stylesheet" href="{% static 'my_css.css' %}">
+{% block body %} {% endblock %}
 
 
 
 
- <link rel="stylesheet" href="{% static 'my_css.css' %}">
-    {% block body %} {% endblock %}
 
-
-
-
-
-
-<footer style="text-align: center; background: #343a40" class="footer  mt-auto py-3" >
-  <div class="container">
-    <span class="text-white">2019 Copyright by Marcin Nieznalski</span>
-  </div>
+{%block footer%}
+<footer style="text-align: center; background: #343a40" class="footer  mt-auto py-3">
+    <div class="container">
+        <span class="text-white">2019 Copyright by Marcin Nieznalski</span>
+    </div>
 </footer>
-
+{%endblock%}
 </body>
 </html>
