--- a/zur/templates/cost_list_view.html
+++ b/zur/templates/cost_list_view.html
@@ -1,27 +1,56 @@
 {% extends 'base.html' %}
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand"  href="{% url 'index'  %}">Start <i class="fas fa-play"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-        <a class="navbar-brand"  href="{% url 'tag_all'  %}">Awarie <i class="fas fa-tools"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-         <a class="navbar-brand"  href="{% url 'tag_add'  %}">Dodaj <i class="fas fa-folder-plus"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-        <a  style="position:  absolute; right: 0px;"  class="navbar-brand"  href="{% url 'logout'  %}">
-            <button class="btn btn-outline-success my-2 my-sm-0"  type="submit"><i class="fas fa-sign-out-alt"></i> Wyloguj</button>
-        </a>
-
-    </nav>
 {% block body %}
+<div  class="container graph_margin">
+    <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+  <thead>
+    <tr>
 
+      <th class="th-sm">Nazwa zlecenia
+
+      </th>
+
+  <th class="th-sm">Nazwa firmy
+
+      </th>
+ <th class="th-sm">Adres
+
+      </th>
+         <th class="th-sm">Akcja
+
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+   {% for object in object_list %}
+    <tr>
+      <td>{{ object.tag_name }}</td>
+      <td>{{ object.comp_name }}</td>
+           <td>{{ object.comp_local}}</td>
+      <td><a  href="/costs/update/{{ object.id }}/" class="btn btn-dark">Edycja </a></td>
+
+    </tr>
+   {% endfor %}
+
+  </tbody>
+</table>
+</div>
+{% endblock %}
+
+
+
+<script>
+    $(document).ready(function () {
+    $('#dtBasicExample').DataTable({
+    "pagingType": "simple",
+        "paging": true ,// false to disable pagination (or any other option)
+    "ordering": true,
+  });
+  $('.dataTables_length').addClass('bs-select');
+});
+</script>
+
+<div  class="container graph_margin">
 <ul>
     <!-- Iterate over object_list -->
     {% for object in object_list %}
@@ -36,4 +65,4 @@
     <li>No objects yet.</li>
     {% endfor %}
 </ul>
-{% endblock %}
+  </div>
