--- a/zur/templates/graph.html
+++ b/zur/templates/graph.html
@@ -1,82 +1,233 @@
-<canvas id="Bug-status-bar2"  class="col-md-6"></canvas>
-<canvas id="Bug-status-bar"  class="col-md-6"></canvas>
+{% extends 'base.html' %}
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
-<script type="text/javascript">
-var ctx = document.getElementById('Bug-status-bar2').getContext('2d');
-var dataArray =  [{% for i in result %}{{ i.count }},{% endfor %}]
-var myChart = new Chart(ctx, {
-type: 'bar',
-data: {
-    labels:  [{% for i in result %}'{{ i.fix_dep__name_fix_cat }}',{% endfor %}],
 
-        datasets: [{  {% for i in result %}
-        label: '{{ i.fix_dep__name_fix_cat }}',
-        data: dataArray,
-        backgroundColor: [
-            'rgba(255, 99, 132, 0.4)',
-            'rgba(54, 162, 235, 0.2)',
-             'rgba(255, 99, 132, 0.4)',
-            'rgba(54, 162, 235, 0.2)',
-             'rgba(54, 162, 235, 0.2)',
-        ],
+{% block body %}
 
-        borderColor: [
-            'rgba(255, 99, 132, 1)',
-            'rgba(54, 162, 235, 1)',
-             'rgba(255, 99, 132, 0.4)',
-            'rgba(54, 162, 235, 0.2)',
-             'rgba(54, 162, 235, 0.2)',
-        ],
-        borderWidth: 1
+    <div  class="container graph_margin">
+        <div class="row">
+            <div class="col-md-6">
+                <canvas id="Bug-status-bar"></canvas>
+            </div>
+            <div class="col-md-6">
+                <canvas id="Bug-status-bar2"></canvas>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <canvas id="Bug-status-bar3"></canvas>
+            </div>
+            <div class="col-md-6">
+                <canvas id="Bug-status-bar4"></canvas>
+            </div>
+            </div>
+        </div>
 
-    }, {% endfor %}]
-},
-options: {
-    scales:  {
-        yAxes: [{
-            ticks: {
-                beginAtZero: true
+
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
+    <script type="text/javascript">
+        var ctx = document.getElementById('Bug-status-bar3').getContext('2d');
+        var dataArray = [{% for i in result %}{{ i.count }}, {% endfor %}];
+        var myChart = new Chart(ctx, { {% for i in result %}
+                type: 'bar',
+                data: {
+                    labels: ['{{ i.fix_dep }}'],
+
+                    datasets: [{
+                        label: '{{ i.fix_dep__name_fix_cat}}',
+                        data: ['{{ i.count}}'],
+
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                        ],
+
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                        ],
+                        borderWidth: 1
+
+                    },]
+
+                }
+            {% endfor %}
+
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+
+            });
+    </script>
+
+
+    <script type="text/javascript">
+        var ctx = document.getElementById('Bug-status-bar2').getContext('2d');
+        var dataArray = [{% for i in result %}{{ i.count }}, {% endfor %}]
+        var myChart = new Chart(ctx, {
+            type: 'pie',
+            data: {
+                labels: [{% for i in result %}'{{ i.fix_dep__name_fix_cat }}',{% endfor %}],
+
+                datasets: [{  {% for i in result %}
+                        label: '{{ i.fix_dep__name_fix_cat }}',
+                        data: dataArray,
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                        ],
+
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                        ], {% endfor %}
+                    borderWidth: 1
+
+                },]
+
+            },
+
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
             }
-        }]
-    }
-}
-});
-</script>
+        });
+    </script>
 
-<script type="text/javascript">
-var ctx = document.getElementById('Bug-status-bar').getContext('2d');
-var dataArray = [{{bug_all_total|safe}}, {{bug_posted_total|safe}}]
-var myChart = new Chart(ctx, {
-type: 'pie',
-data: {
-    labels: ['Niewykonane', 'Wykonane'],
-    datasets: [{
-        label: 'Statistic on bug activity',
-        data: dataArray,
-        backgroundColor: [
-            'rgba(255, 99, 132, 0.4)',
-            'rgba(54, 162, 235, 0.2)',
-        ],
+    <script type="text/javascript">
+        var ctx = document.getElementById('Bug-status-bar').getContext('2d');
+        var dataArray = [{{bug_all_total|safe}}, {{bug_posted_total|safe}}]
+        var myChart = new Chart(ctx, {
+            type: 'pie',
+            data: {
+                labels: ['Niewykonane', 'Wykonane'],
+                datasets: [{
+                    label: 'Statistic on bug activity',
+                    data: dataArray,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.4)',
+                        'rgba(54, 162, 235, 0.2)',
+                    ],
 
-        borderColor: [
-            'rgba(255, 99, 132, 1)',
-            'rgba(54, 162, 235, 1)',
-        ],
-        borderWidth: 1
-    }]
-},
-options: {
-    scales:  {
-        yAxes: [{
-            ticks: {
-                beginAtZero: true
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
             }
-        }]
-    }
-}
-});
-</script>
+        });
+    </script>
 
 
+    <script type="text/javascript">
+        var ctx = document.getElementById('Bug-status-bar3').getContext('2d');
+        var dataArray = [{% for i in result2 %}{{ i.count }}, {% endfor %}]
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: [{% for i in result2 %}'{{ i.machine }}',{% endfor %}],
+
+                datasets: [{  {% for i in result2 %}
+                        label: '{{ i.machine }}',
+                        data: dataArray,
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                        ],
+
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 99, 132, 0.4)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                        ], {% endfor %}
+                    borderWidth: 1
+
+                },]
+
+            },
+
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
+
+    <script type="text/javascript">
+        var ctx = document.getElementById('Bug-status-bar4').getContext('2d');
+        var dataArray = [{% for i in result3 %}{{ i.count }}, {% endfor %}]
+        var myChart = new Chart(ctx, {
+            type: 'pie',
+            data: {
+                labels: [{% for i in result3 %}'{{ i.work_cat__name_work_cat }}',{% endfor %}],
+                datasets: [{
+                    label: 'Statistic on bug activity',
+                    data: dataArray,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.4)',
+                        'rgba(54, 162, 235, 0.2)',
+                    ],
+
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
+{% endblock %}
