--- a/zur/templates/index.html
+++ b/zur/templates/index.html
@@ -6,27 +6,6 @@
 
 {% block body %}
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand"  href="{% url 'index'  %}">Start <i class="fas fa-play"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-        <a class="navbar-brand"  href="{% url 'tag_all'  %}">Awarie <i class="fas fa-tools"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-         <a class="navbar-brand"  href="{% url 'tag_add'  %}">Dodaj <i class="fas fa-folder-plus"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-        <a  style="position:  absolute; right: 0px;"  class="navbar-brand"  href="{% url 'logout'  %}">
-            <button class="btn btn-outline-success my-2 my-sm-0"  type="submit"><i class="fas fa-sign-out-alt"></i> Wyloguj</button>
-        </a>
-
-    </nav>
 
 <!-- News jumbotron -->
 <div style="margin-top: 55px" class="jumbotron text-center hoverable p-4">
@@ -80,7 +59,7 @@
 
 
 <div class="card-group " style="margin-left: 23px">
-    <div class="row">
+    <div class="row justify-content-center">
     {%for tag in card_tag%}
 
   <div class="card border-light mb-3  ; col-sm-4;   " style="width: 20rem; background: #e9ecef "  >
@@ -118,7 +97,6 @@
     {%endfor%}
         </div>
 </div>
-
 
 
 {% endblock %}
