--- a/zur/templates/pay_detail.html
+++ b/zur/templates/pay_detail.html
@@ -1,20 +1,13 @@
-{% extends 'base.html' %}
-{% load static %}
 
 
 
+<body>
 
-
-
-
-
-
-
-{% block body %}
 <h1>Zamówienie {{ order1.id }}</h1>
 <ul class="object-tools">
   <li>
     <a href="#" onclick="window.print();">Drukuj zamówienie</a>
+
   </li>
 </ul>
 <table>
@@ -73,4 +66,4 @@
   </div>
 </div>
 
-{% endblock %}
+</body>
