--- a/zur/templates/registration/login.html
+++ b/zur/templates/registration/login.html
@@ -1,13 +1,30 @@
 {% extends 'base.html' %}
+
 {% load bootstrap %}
+{% load static %}
+
 {% block title %}Strona logowania{% endblock %}
+{% block navbar %}{% endblock %}
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'my_css.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+
+
+</head>
 
 {% block body %}
-<div class="bacground_login"></div>
     <div class="ab_center">
-        <div class="card"  style="width: 21.5rem; margin: 0 auto">
+        <div class="card border-success mb-3"  style="width: 21.5rem; margin: 0 auto">
           <div class="card-body" >
               <h5 class = "card-title" align="center">Zaloguj się do systemu</h5>
             <form method="post">
@@ -18,9 +35,8 @@
                 </div>
             </form>
           </div>
-        </div>
-    </div>
 
+</div>
 {% endblock %}
 
-
+{% block footer %}{% endblock %}
