--- a/zur/templates/tag_costs.html
+++ b/zur/templates/tag_costs.html
@@ -1,13 +1,21 @@
 
 
 {% load static %}
-
 <head>
-    <title>Multiformset Demo</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.formset/1.2.2/jquery.formset.min.js" integrity="sha512-ltwjKsDTo3hW/wV66ZaEkf2wOAFxmg7rWM76J8kOcYKLSKy44WBYO/BFaNNH3NGDS8BSz3meB9wtSnm41oL+pA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.formset/1.2.2/jquery.formset.js" integrity="sha512-Tsdobfrx6IMRPi8d5z3AtjWNSbZxGm58IZFnblaRaepw562ZITlRhUM2Zu87vbvZjQxGmmto+31zEBLZ4wjs+w==" crossorigin="anonymous"></script>
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'my_css.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
 
     <script type="text/javascript">
@@ -23,22 +31,67 @@
         formTemplate: null,              // The jQuery selection cloned to generate new form instances
         addText: 'Dodaj',          // Text for the add link
         deleteText: 'Usuń',            // Text for the delete link
-        addCssClass: 'add-row',          // CSS class applied to the add link
+        addCssClass: 'btn btn-success btn-lg ',          // CSS class applied to the add link
         deleteCssClass: 'delete-row',    // CSS class applied to the delete link
         formCssClass: 'dynamic-form',    // CSS class applied to each form in a formset
         extraClasses: [],                // Additional CSS classes, which will be applied to each form in turn
         added: null,                     // Function called each time a new form is added
         removed: null                    // Function called each time a form is deleted
     };
+
     </script>
 
 </head>
-{% block body %}
-<body>
+<body class="d-flex flex-column min-vh-100">
 
-    <div>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="{% url 'index' %}">Start <i class="fas fa-play"></i></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a class="navbar-brand" href="{% url 'tag_all' %}">Awarie <i class="fas fa-tools"></i></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a class="navbar-brand" href="{% url 'tag_add' %}">Dodaj <i class="fas fa-folder-plus"></i></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a class="navbar-brand" href="{% url 'graph.html' %}">Statystyka <i class="fas fa-chart-pie"></i> </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="dropdown show">
+        <a class="navbar-brand" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+           Rozliczenia <i class="fas fa-search-dollar"></i>
+        </a>
+
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'urcost:cost_list' %}">Pokaż rozliczenia</a>
+            <a class="dropdown-item" href="{% url 'urcost:cost_add' %}">Dodaj</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+    </div>
+    <a style="position:  absolute; right: 0px;" class="navbar-brand" href="{% url 'logout' %}">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-sign-out-alt"></i> Wyloguj
+        </button>
+    </a>
+
+</nav>
+
+  <div  class="container graph_margin">
+
         <h1>Rozliczenie zlecenia</h1>
-        <form action="." method="post">
+        <form action="." method="post" enctype="multipart/form-data">
             {% csrf_token %}
 
             <div>
@@ -64,13 +117,20 @@
                         {{ form.cost_material.label_tag }}
                         {{ form.cost_material }}
                     </div>
+
                 {% endfor %}
+
             </fieldset>
+            <input type="submit" value="Dodaj rozliczenie" class="btn-danger" />
 
-            <input type="submit" value="Dodaj rozliczenie" class="submit" />
         </form>
+  </div>
+
+
+<footer style="text-align: center; background: #343a40" class="footer  mt-auto py-3">
+    <div class="container">
+        <span class="text-white">2019 Copyright by Marcin Nieznalski</span>
     </div>
-</body>
+</footer>
+    </body>
 
-
-{% endblock %}
